# dual-readout_TB

./: .gitignore  CMakeLists.txt  LICENSE  README.md  buildNinstall.sh  buildNinstall_Mac.sh  condor_submit_fast.sub  condor_submit_wave.sub  condor_valid_fast.sh  condor_valid_wave.sh  envset.sh  envset_Mac.sh  fast.cc  read.cc
analysis/: TBauxPID.cc  TBavgTimeStructure.cc  TBcompare.cc  TBdrawWave.cc  TBdwc.cc  TBfast  TBfast.cc  TBintADC.cc  TBped.cc  TBratio.cc  TBtest.cc  TBvalid  TBvalid.cc  compile.sh  compile_KNU.sh  compile_Mac.sh  functions.cc  mapping_data_MCPPMT_positiveSignal_v3.csv  run_list_m1.txt  run_list_m2.txt
analysis/condor_script/: exe_avg_m1.sh  sub_avg_m1.sub
condor_script/: exe_condor.sh  sub_condor.sub
developing_codes/: TBread_dev_adding_fileSplit.cc  TBread_dev_adding_fileSplit.h  TBvalid_dev_adding_waveform_validation.cc  TBvalid_dev_adding_waveform_validation.h  pydrcTB_dev_adding_fileSplit.cpp  pydrcTB_dev_adding_waveform_validation.cpp
include/: LinkDef.hh  TBdetector.h  TBevt.h  TBhist.h  TBload.h  TBmid.h  TBmonit.h  TBplot.h  TBread.h  TButility.h  TBvalid.h
install/include/: TBmid.h  TBplot.h
install/lib/: libdrcTB.rootmap  libdrcTB_rdict.pcm
legacy_codes/: pydrcTB_how_to_add_overload_func.cpp
legacy_codes/org/: TBntuplize_org.py  TBread_org.cc
legacy_codes/ver_1_adding_multi_file_reading/: TBread_dev_ver_1_adding_multi_file_reading.cc  pydrcTB_dev_ver_1_adding_multi_file_reading.cpp
legacy_codes/ver_2_more_efficient_code/: TBread_dev_ver_2_more_efficient_code.cc
legacy_codes/ver_3_fastmode_split_added/: TBread_dev_ver_3_fastmode_split_added.cc  TBread_dev_ver_3_fastmode_split_added.h  pydrcTB_dev_ver_3_fastmode_split_added.cpp
legacy_codes/ver_4_fastmode_validator_added/: TBread.cc  TButility.cc  TButility.h  TBvalid.cc
ntupler/: TBntuplize.py  TBvalidator.py
src/: TBdetector.cc  TBevt.cc  TBhist.cc  TBload.cc  TBmid.cc  TBmonit.cc  TBplot.cc  TBread.cc  TButility.cc  TBvalid.cc  pydrcTB.cpp
test/: TBanalysis.cc  TBanalysis.py  TBmonit.py  TBntuplize.py  TBntuplize_Mac.py  TBntuplize_both_mode.py  TBntuplize_fast_multi.py  TBntuplize_fast_multi_and_split.py  TBonline.py  TBplotdqm.py  TBvalid.py  TBvalid_M1.py  TBvalid_M2.py  analysis_fast.py  analysis_wave.py  run_fast.sh  run_list.txt  run_wave.sh  sample_ped.csv
